weewx/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: weewx-ingress
  namespace: weewx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules: 
  - host: weewx.192.168.50.240.nip.io
    http:
      paths:
        - path: /
          backend:
            serviceName: weewx-web
            servicePort: 80
---
